# project-cli

./: .gitignore  ARCHITECTURE.md  COMMANDES.md  CONTRIBUTING.md  NAVIGATION.md  README.md  SUGGESTIONS.md  SYNC_FEATURE_SUMMARY.md  TIME_TRACKING_FEATURE.md  pyproject.toml  run.sh  test.md
docs/: README.md
docs/commands/: add.md  auth.md  commits.md  edit.md  git-tree.md  github.md  info.md  list.md  log.md  rm.md  scan.md  stale.md  stats.md  status.md  sync.md  tag.md  track.md  tree.md
migrations/: 001_add_sync_analytics.py  002_add_time_tracking.py
projects/: __init__.py  cli.py  config.py  credentials.py  database.py  display.py  git_utils.py  hook_installer.py  hook_templates.py  models.py  remote_api.py  scaffold.py  sync_orchestrator.py  sync_queue.py  templates.py
projects/commands/: __init__.py  add.py  auth.py  commits.py  config_cmd.py  dashboard.py  edit.py  git_tree.py  github.py  info.py  list.py  log.py  open.py  refresh.py  rm.py  scan.py  stale.py  stats.py  status.py  sync.py  tag.py  track.py  tree.py
projects/tui/: __init__.py  app.py  styles.css
projects/tui/modals/: __init__.py  add_project_modal.py  base_modal.py  confirmation_modal.py  edit_project_modal.py  help_modal.py  scan_modal.py  tag_modal.py
projects/tui/panels/: __init__.py  detail_panel.py
projects/tui/screens/: __init__.py  dashboard.py
projects/tui/utils/: __init__.py  async_worker.py  keybindings.py
projects/tui/widgets/: __init__.py  footer.py  git_overview.py  projects_table.py  quick_actions.py  search_bar.py  stats_panel.py
